--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<profile>
 			<id>stage</id>
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
 				<env.message>stage</env.message>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -63,6 +63,15 @@
 					<warSourceDirectory>
 						${project.build.directory}/${project.build.finalName}
 					</warSourceDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M3</version>
+				<configuration>
+					<parallel>all</parallel>
+					<threadCount>10</threadCount>
 				</configuration>
 			</plugin>
 		</plugins>
